force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>The Order object represents a customer food order. It tracks the auto-numbered order number, date, status (Pending through Delivered), and total amount, linked to a customer Contact. Commonly used for order processing, delivery coordination, and sales reporting.</description>
    <label>Order</label>
    <nameField>
        <displayFormat>ORD-{00000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>