force-app/main/default/objects/Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>The date and time when the customer placed this order.</description>
    <label>Order Date</label>
    <type>DateTime</type>
</CustomField>