force-app/main/default/objects/Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>The total monetary value of this order. Populated by Apex business logic summing the unit prices and quantities of all associated Order Items.</description>
    <label>Total Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>