force-app/main/default/objects/Order__c/validationRules/Order_Invalid_Status_Transition.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Invalid_Status_Transition</fullName>
    <active>true</active>
    <description>Prevents invalid Order status transitions. Blocks any change once the Order is in a terminal state (Delivered or Cancelled). Also blocks backwards transitions that violate the defined lifecycle.</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;
(
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Delivered&quot;) ||
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Cancelled&quot;) ||
    (ISPICKVAL(PRIORVALUE(Status__c), &quot;Accepted&quot;) &amp;&amp;
        ISPICKVAL(Status__c, &quot;Pending&quot;)) ||
    (ISPICKVAL(PRIORVALUE(Status__c), &quot;Preparing&quot;) &amp;&amp;
        (ISPICKVAL(Status__c, &quot;Pending&quot;) || ISPICKVAL(Status__c, &quot;Accepted&quot;))) ||
    (ISPICKVAL(PRIORVALUE(Status__c), &quot;Out for Delivery&quot;) &amp;&amp;
        (ISPICKVAL(Status__c, &quot;Pending&quot;) || ISPICKVAL(Status__c, &quot;Accepted&quot;) || ISPICKVAL(Status__c, &quot;Preparing&quot;)))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Invalid status transition. Terminal statuses (Delivered, Cancelled) cannot be changed. Lifecycle order: Pending - Accepted - Preparing - Out for Delivery - Delivered.</errorMessage>
</ValidationRule>